# rustauthx

./: Cargo.toml  README.md
src/: main.rs  routes.rs
src/auth/: jwt.rs
src/database/: mod.rs
src/handlers/: auth.rs
src/middleware/: auth.rs
src/models/: claims.rs  user.rs
