[package]
name = "rustauthx"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mongodb = { version = "2.6.0", default-features = false, features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
